--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>基于 CloudFlare 的在线文生图服务</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/huarzone/Text2img-Cloudflare-Workers@main/public/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://image.ppking.me/text2img/favicon.ico">
     <style>
         :root {
             --primary: #5046e5;
@@ -301,7 +301,7 @@
                 <button id="themeToggle" class="btn btn-secondary p-2 h-10 w-10 flex items-center justify-center" aria-label="切换暗色主题">
                     <i class="fa-solid fa-moon"></i>
                 </button>
-                <button id="github" class="btn btn-secondary p-2 h-10 w-10 flex items-center justify-center" aria-label="项目地址" onclick="window.open('https://github.com/huarzone/Text2img-Cloudflare-Workers', '_blank')">
+                <button id="github" class="btn btn-secondary p-2 h-10 w-10 flex items-center justify-center" aria-label="项目地址" onclick="window.open('https://github.com/huyuanxin/Text2img-Cloudflare-Workers', '_blank')">
                     <i class="fa-brands fa-github"></i>
                 </button>
             </div>
